tests/multiplatform_supports_platform/android-only.js.flow
/**
 * @supportsPlatform android
 */
// error: missing android
